<resources>
    <string name="app_name">EventRadar</string>
    <string name="title_home_screen">Home</string>
    <string name="title_map_screen">Map</string>
    <string name="title_comments_screen">Comments</string>
    <string name="title_settings_screen">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_location_button_text">Add Location</string>
    <string name="enter_location">Enter location</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="country">country</string>
    <string name="result">result</string>
    <string name="no_areas_of_interest_label">Stay informed — select countries for disaster alerts</string>
    <string name="no_interest_title">No Countries Selected</string>
    <string name="no_interest_description">To get real-time disaster alerts, add countries you\'re interested in.</string>
    <string name="add_areas_of_interest_button_label">Add Country</string>
    <string name="no_comments">You have no comments for events in your countries of interest</string>
</resources>