<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.EventsFeedFragment">

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/emptyStateContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        android:visibility="visible">

        <!-- Title -->
        <TextView
            android:id="@+id/emptyStateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/no_interest_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Description -->
        <TextView
            android:id="@+id/emptyStateLabel"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/no_interest_description"
            android:textAlignment="center"
            android:textColor="@color/grey_darkest"
            android:textSize="16sp" />

        <!-- Add Country Button -->
        <Button
            android:id="@+id/addInterestAreasButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_600"
            android:text="@string/add_areas_of_interest_button_label"
            android:textColor="@color/white" />
    </LinearLayout>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="72dp">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/eventsStatsFragmentContainerInsideScroll"
                    android:name="com.col.eventradar.ui.views.EventsStatsFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/eventCardListFragmentContainer"
                    android:name="com.col.eventradar.ui.views.EventCardListFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
